--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "axios": "^1.12.2",
     "config": "^4.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
